@@ -1,5 +1,10 @@
 2025-07-15  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el: Refactor and update comments.
+	* packages.el: Remove gptel-quick.
+
+2025-07-15  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (auth-sources-gpg-encrypt-to): Set to a list.
 
 2025-07-14  Zhengyi Fu  <i@fuzy.me>
